# hunting-for-exoplanets-with-AI

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  EXEC-README.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_api.yml  delete_infra.yml  deploy_infra.yml  swa.yml
configs/: data.yaml  evaluate.yaml  experiment_lightgbm.yaml  train.yaml  web.yaml
data/: README.md
docs/: api.md  azure.md  datasets.md  overview.md  structure.md  ui.md  website.md
experiments/: README.md
infra/docker/: Dockerfile.api
infra/terraform/: README.md  api.tf  container_registry.tf  data.tf  iam.tf  key_vault.tf  key_vault_policies.tf  locals.tf  machine_learning.tf  main.tf  monitoring.tf  outputs.tf  providers.tf  resource_group.tf  role_assignments.tf  storage.tf  swa.tf  variables.tf
notebooks/: 00_explore_kepler.ipynb  01_clean_merge_k2.ipynb  02_feature_eng.ipynb  03_model_baselines.ipynb  04_model_interpretability.ipynb  exoplanet_detection.ipynb
reports/: RUN_LOG.md  datasets_info.json  final_summary.json  final_summary_extended.json  transfer_results.json
scripts/: batch_predict.py  evaluate_model.py  export_onnx.py  fetch_data.py
src/exoplanet_ai/: README.md  __init__.py
src/exoplanet_ai/api/: __init__.py  app.py
src/exoplanet_ai/data/: __init__.py
src/exoplanet_ai/evaluation/: __init__.py
src/exoplanet_ai/inference/: __init__.py
src/exoplanet_ai/preprocessing/: __init__.py
src/exoplanet_ai/training/: __init__.py
src/exoplanet_ai/ui/: __init__.py
src/exoplanet_ai/utils/: __init__.py  logging.py  paths.py
web/: staticwebapp.config.json
web/api/: deps.py  main.py
web/api/routers/: predict.py
web/site/: README (1).md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/site/data/: EDA_datasets.ipynb  KOI_scatter.csv
web/site/src/: App.tsx  index.css
web/site/src/components/: ClusteringCharts.tsx  DataVisualization.tsx  ExoplanetTable.tsx  GlossarySection.tsx  Header.tsx  HeroSection.tsx  (+3 more)
(+10 files in other folders)
